--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,37 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
+    <%= javascript_pack_tag "application", 'data-turbolinks-track': "reload" %>
   </head>
 
   <body>
+    <% if flash[:error] %>
+        <p class="Flash-error">
+          <%= flash[:error] %>
+        </p>
+    <% end %>
+    <% if current_user %>
+      <div class="UserHeader">
+        <div>
+          <%= link_to "Home", "/", method: "get" %>
+        </div>
+        <div class="Header">
+          <div>
+            <img src="https://i.pinimg.com/originals/d0/90/02/d09002b6a1bcb269387fe31cecb7c8da.png"
+              alt="chef"
+              class="chef-img" />
+          </div>
+          <div>
+            Cafeteria
+          </div>
+      </div>
+      <div>
+        Welcome <%= current_user.first_name %>! |
+        <%= link_to "Sign-out", destroy_session_path, method: "delete" %>
+      </div>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
