included view users to admin panel

--- a/app/views/users/customer_index.html.erb
+++ b/app/views/users/customer_index.html.erb
@@ -1,7 +1,8 @@
 <div class="UserHome">
   <div class="divButton"><%= link_to "My Orders", orders_path, class: "link" %></div>
   <div class="divButton"><%= link_to "Create Order", "orders/new", class: "link" %></div>
+  <div class="divButton"><%= link_to "View Users", "users/all", class: "link" %></div>
   <div class="divButton"><%= link_to "Add Menu", "menus/new", class: "link" %></div>
-
+  <div class="divButton"><%= link_to "Edit Menu", "menus", class: "link" %></div>
   <div class="divButton"><%= link_to "My Cart", carts_path, class: "link" %></div>
 </div>
